--- a/fylo-landing-page-with-two-column-layout-master/index.html
+++ b/fylo-landing-page-with-two-column-layout-master/index.html
@@ -44,7 +44,7 @@
                   name="submit"
                   placeholder="Enter your email"
                 />
-                <button class="btn">Get Started</button>
+                <button class="primary-btn">Get Started</button>
               </p>
             </div>
           </div>
