adds comment line

--- a/navigation-bar/index.html
+++ b/navigation-bar/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <nav>
+      <!-- MOBILE HEADER -->
       <ul class="sidebar">
         <li onclick="hideSidebar()">
           <a href="#"
@@ -29,6 +30,7 @@
         <li><a href="#">Login</a></li>
       </ul>
       <ul>
+        <!-- DESKTOP HEADER -->
         <li><a href="#">Coding2go</a></li>
         <li class="hideOnMobile"><a href="#">Blog</a></li>
         <li class="hideOnMobile"><a href="#">Products</a></li>
