--- a/blog-preview-card-main/index.html
+++ b/blog-preview-card-main/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <div>
         <img
           src="./assets/images/illustration-article.svg"
@@ -41,13 +41,13 @@
         />
         <p>Greg Hooper</p>
       </div>
-    </div>
+    </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Uzochukwu Cecilia Oloh</a>.
-    </div>
+    </footer>
   </body>
 </html>
